# AbyssCraft

./: .gitignore  CMakeLists.txt  README.MD  compilator.sh  push.sh
assets/shaders/: core.frag  core.vert
include/core/: Camera.h  Config.h  Game.h  Window.h
include/glad/: glad.h
include/render/: Shader.h  Tessellator.h  TextureManager.h
include/world/: BlockRegistry.h  BlockState.h  ChunkColumn.h  ChunkSection.h
src/: glad.c  main.cpp
src/core/: Camera.cpp  Game.cpp  Window.cpp
src/render/: Shader.cpp  Tessellator.cpp  TextureManager.cpp
src/world/: BlockRegistry.cpp  ChunkColumn.cpp  ChunkSection.cpp
